--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,30 @@
 {
-    "name": "staffim/spreadsheet-builder",
-    "description": "Small library for PhpSpreadsheet that helps to build xlsx tables by configuring data columns",
-    "keywords": ["xlsx", "PhpSpreadsheet", "table", "spreadsheet builder"],
-    "type": "stable",
-    "require": {
-        "php": "^7.2",
-        "phpoffice/phpspreadsheet": "^1.9"
+  "name": "staffim/spreadsheet-builder",
+  "description": "Small library for PhpSpreadsheet that helps to build xlsx tables by configuring data columns",
+  "keywords": [
+    "xlsx",
+    "PhpSpreadsheet",
+    "table",
+    "spreadsheet builder"
+  ],
+  "type": "stable",
+  "require": {
+    "php": "^7.2",
+    "phpoffice/phpspreadsheet": "^1.9"
+  },
+  "require-dev": {
+    "roave/security-advisories": "dev-master"
+  },
+  "autoload": {
+    "psr-4": {
+      "Staffim\\SpreadsheetBuilder\\": "src/"
     }
-    ,
-    "require-dev": {
-        "roave/security-advisories": "dev-master"
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Aleksandr Klimenkov",
-            "email": "alx.devel@gmail.com"
-        }
-    ]
+  },
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Aleksandr Klimenkov",
+      "email": "alx.devel@gmail.com"
+    }
+  ]
 }
