--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
     "php": "^7.2",
     "ext-dom": "*",
     "ext-mbstring": "*",
-    "phpoffice/phpspreadsheet": "^1.9",
-    "friendsofphp/php-cs-fixer": "^2.16",
-    "escapestudios/symfony2-coding-standard": "^3.10"
+    "phpoffice/phpspreadsheet": "^1.9"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
-    "phpunit/phpunit": "^8.5"
+    "phpunit/phpunit": "^8.5",
+    "escapestudios/symfony2-coding-standard": "^3.10",
+    "friendsofphp/php-cs-fixer": "^2.16"
   },
   "autoload": {
     "psr-4": {
