--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "php": "^7.2|>=8.0",
     "ext-dom": "*",
     "ext-mbstring": "*",
+    "ext-json": "*",
     "phpoffice/phpspreadsheet": "^1.9"
   },
   "require-dev": {
